@@ -341,3 +341,4 @@ v0.72.2:
     - Added config.yml settings for force_explosions_on, force_monsters_on and force_fire_on. These will prevent Mayors toggling the settings.
     - Added world configs for Forced Fire,Explosions and Monsters.
     - Moved some townyworld commands the a new toggle command '/townyworld toggle claimable, usingtowny, pvp, explosion, fire and mobs.
+    - Changed to protect towns not in nations from explosions during a war.
